<resources>
    <string name="app_name">EADEP</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="title_description">EADEP</string>
    <string name="login_btn">Entrar</string>
    <string name="forgot_pswd">Esqueceu a senha?</string>
    <string name="signup_btn">Cadastrar</string>
    <string name="fields_act_title">Disciplinas</string>
    <string name="login_act_title">Login</string>
    <string name="error_connection">Você não tem conexão...</string>
    <string name="hint_name">Nome</string>
    <string name="hint_lastname">Sobrenome</string>
    <string name="hint_registration_number">Número de matrícula</string>
    <string name="hint_year">Ano</string>
    <string name="hint_phone">Telefone</string>
    <string name="register_button">Cadastrar</string>
    <string name="signup_act_title">Cadastro</string>
    <string name="register_act_title">Cadastro de alunos</string>
    <string name="atividades_act_title">Atividades</string>
    <string name="detalhes_at_act_title">Detalhes</string>
    <string name="reissue_button">Salvar Alterações</string>
    <string name="edicao_at_act_title">Perfil</string>
    <string name="activity_detailed_btn">Comentar</string>
    <string name="logout_text">Desconectar</string>
</resources>
