<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EdicaoActivity">

    <EditText
        android:id="@+id/name_reissue_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastname_reissue_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_lastname"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/registration_number_reissue_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_registration_number"
        android:inputType="text" />

    <EditText
        android:id="@+id/year_reissue_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_year"
        android:inputType="text" />


    <EditText
        android:id="@+id/phone_reissue_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_phone"
        android:inputType="number" />

    <EditText
        android:id="@+id/email_reissue_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/password_reissue_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/reissue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:text="@string/reissue_button"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorLogout"
        android:elevation="4dp"
        android:text="@string/logout_text"
        android:textColor="@android:color/white"/>

</LinearLayout>