<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/cadastro_aluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cadastro de Alunos"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:id="@+id/name_edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastname_edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_lastname"
        android:inputType="textPersonName" />



    <EditText
        android:id="@+id/registration_number_edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_registration_number"
        android:inputType="text" />

    <EditText
        android:id="@+id/year_edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_year"
        android:inputType="text" />


    <EditText
        android:id="@+id/phone_edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_phone"
        android:inputType="number" />

    <EditText
        android:id="@+id/email_edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/password_edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_button"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        />



</LinearLayout>