<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:contentDescription="@string/title_description"
        android:minHeight="120dp"
        android:src="@drawable/title" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pswd_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:text="@string/login_btn"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="8dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:text="@string/signup_btn"
        android:textColor="@android:color/white" />
</LinearLayout>